--- a/demo/src/main/res/values/colors.xml
+++ b/demo/src/main/res/values/colors.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--primary theme-->
     <color name="colorPrimary">#47A149</color>
-    <color name="colorPrimaryDark">#47A149</color>
-    <color name="colorAccent">#56C359</color>
-    <color name="colorLight">#FFFFFF</color>
+    <color name="color_light_status_bar">#47A149</color>
+    <color name="color_light_accent">#56C359</color>
+    <color name="color_light_background">#FFFFFF</color>
+    <color name="color_light_navigation_drawer">#FFFFFF</color>
+    <color name="color_light_progress_indicator">#33195C63</color>
+    <color name="color_light_native_ad_background">#F3F3F3</color>
+    <color name="color_light_title_toolbar">#FFFFFF</color>
+    <color name="color_light_text">#292929</color>
 
     <!--dark theme color-->
-    <color name="colorStatusBarDark">#222D36</color>
-    <color name="colorToolbarDark">#222D36</color>
-    <color name="colorAccentDark">#56C359</color>
-    <color name="colorBackgroundDark">#101D24</color>
+    <color name="color_dark_status_bar">#222D36</color>
+    <color name="color_dark_toolbar">#222D36</color>
+    <color name="color_dark_accent">#4E575D</color>
+    <color name="color_dark_background">#101D25</color>
+    <color name="color_dark_navigation_drawer">#101D25</color>
+    <color name="color_dark_progress_indicator">#BDC0C3</color>
+    <color name="color_dark_native_ad_background">#222D36</color>
+    <color name="color_dark_title_toolbar">#FFFFFF</color>
+    <color name="color_dark_text">#BDC0C3</color>
+    <color name="color_dark_dialog">#384756</color>
 
     <color name="colorBlue">#2196F3</color>
     <color name="colorGreen">#4CAF50</color>
     <color name="colorPurple">#9c27b0</color>
+    <color name="color_white">#FFFFFF</color>
 
     <color name="colorNativeBackgroundLight">#EAEAEA</color>
     <color name="colorNativeBackgroundDark">#424242</color>
