--- a/demo/src/main/res/values/styles.xml
+++ b/demo/src/main/res/values/styles.xml
@@ -5,31 +5,75 @@
 
     <style name="AppDarkTheme" parent="BaseDarkTheme" />
 
-    <style name="BaseTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="BaseTheme" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/colorLight</item>
-        <item name="materialButtonStyle">@style/AppTheme.materialButton</item>
+        <item name="colorPrimaryDark">@color/color_light_status_bar</item>
+        <item name="colorAccent">@color/color_light_accent</item>
+        <item name="android:windowBackground">@color/color_light_background</item>
         <item name="android:fontFamily">@font/custom_font</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+        <item name="colorOnSurface">@color/colorPrimary</item>
+        <item name="colorOnSecondaryContainer">@color/colorPrimary</item>
+        <item name="materialAlertDialogTheme">@style/Material3AlertDialogDefault</item>
+        <item name="android:popupElevation">3dp</item>
     </style>
 
-    <style name="BaseDarkTheme" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="BaseDarkTheme" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorStatusBarDark</item>
-        <item name="colorAccent">@color/colorAccentDark</item>
-        <item name="android:windowBackground">@color/colorBackgroundDark</item>
-        <item name="materialButtonStyle">@style/AppTheme.materialButton</item>
+        <item name="colorPrimaryDark">@color/color_dark_status_bar</item>
+        <item name="colorAccent">@color/color_dark_accent</item>
+        <item name="android:windowBackground">@color/color_dark_background</item>
         <item name="android:fontFamily">@font/custom_font</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
+        <item name="colorOnSurface">@color/color_white</item>
+        <item name="colorOnSecondaryContainer">@color/color_white</item>
+        <item name="materialAlertDialogTheme">@style/Material3AlertDialogDark</item>
+        <item name="materialSwitchStyle">@style/Widget.App.Switch</item>
+        <item name="android:popupElevation">3dp</item>
     </style>
 
-    <style name="AppTheme.materialButton" parent="Widget.MaterialComponents.Button">
-        <item name="textAllCaps">false</item>
-        <item name="cornerRadius">@dimen/corner_radius</item>
-        <item name="backgroundTint">@color/colorPrimary</item>
-        <item name="android:height">50dp</item>
+    <style name="Material3AlertDialogDefault" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="materialAlertDialogTitleTextStyle">@style/Material3AlertDialogTextStyle</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/Material3AlertDialogBodyTextStyle</item>
+        <item name="colorPrimary">@color/color_light_background</item>
+        <item name="backgroundTint">@color/color_light_background</item>
+        <item name="colorSurface">@color/color_light_background</item>
+        <item name="buttonBarPositiveButtonStyle">@style/Widget.App.Button</item>
+        <item name="buttonBarNegativeButtonStyle">@style/Widget.App.Button</item>
+        <item name="buttonBarNeutralButtonStyle">@style/Widget.App.Button</item>
+    </style>
+
+    <style name="Material3AlertDialogDark" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="materialAlertDialogTitleTextStyle">@style/Material3AlertDialogTextStyle</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/Material3AlertDialogBodyTextStyle</item>
+        <item name="colorPrimary">@color/color_dark_background</item>
+        <item name="backgroundTint">@color/color_dark_background</item>
+        <item name="colorSurface">@color/color_dark_background</item>
+        <item name="buttonBarPositiveButtonStyle">@style/Widget.App.Button</item>
+        <item name="buttonBarNegativeButtonStyle">@style/Widget.App.Button</item>
+        <item name="buttonBarNeutralButtonStyle">@style/Widget.App.Button</item>
+    </style>
+
+    <style name="Material3AlertDialogTextStyle" parent="MaterialAlertDialog.Material3.Title.Text">
+        <item name="android:fontFamily">@font/custom_font</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Material3AlertDialogBodyTextStyle" parent="MaterialAlertDialog.Material3.Body.Text">
+        <item name="android:fontFamily">@font/custom_font</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Widget.App.Button" parent="Widget.Material3.Button.TextButton.Dialog">
+        <item name="colorPrimary">@color/color_light_accent</item>
+        <item name="android:textColor">@color/color_light_accent</item>
+    </style>
+
+    <style name="Widget.App.Switch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
+        <item name="thumbTint">@color/color_white</item>
     </style>
 
 </resources>
